# GPU-DSM

./: CMakeLists.txt  dsm_demo.cu  dsm_manager.hpp  dummy.cu
cmake/: FindCUDAToolkit.cmake
examples/: global_array_demo.cu  legacy_demo.cu
nvshmem/: .gitignore  CMakeLists.txt  README.md  changelog
nvshmem/cmake_config/: NVSHMEMClangSetup.cmake  NVSHMEMEnv.cmake
nvshmem/nvshmem4py/: .style.yapf  CMakeLists.txt  License.txt  requirements_build.txt  requirements_cuda12.txt  requirements_cuda13.txt  setup.py
nvshmem/nvshmem4py/build_assets/numbast/: config_nvshmem.py
nvshmem/nvshmem4py/build_assets/numbast/templates/: config_nvshmem.yml.j2
nvshmem/nvshmem4py/cmake/: addNumbast.cmake  buildWheel.cmake  force-rebuild-python-lib.cmake  generateCuteBindings.cmake
nvshmem/nvshmem4py/examples/: device_custom_kernel.py  device_ring_all_reduce.py  init_fini.py  on-stream.py  simple_p2p_kernel.py  torch_mempool.py  torch_triton_interop.py  triton_comm_kernels.py
nvshmem/nvshmem4py/examples/device/numba/: moe_dataflow.py
nvshmem/nvshmem4py/nvshmem/: __init__.py
nvshmem/nvshmem4py/nvshmem/bindings/: __init__.py  cynvshmem.pxd  cynvshmem.pyx  nvshmem.pxd  nvshmem.pyx
nvshmem/nvshmem4py/nvshmem/bindings/_internal/: nvshmem.pxd  nvshmem_linux.pyx
nvshmem/nvshmem4py/nvshmem/bindings/device/: __init__.py
nvshmem/nvshmem4py/nvshmem/bindings/device/cute/: __init__.py
nvshmem/nvshmem4py/nvshmem/bindings/device/numba/: __init__.py  _numbast.py
nvshmem/nvshmem4py/nvshmem/core/: __init__.py  _internal_tracking.py  collective.py  direct.py  init_fini.py  memory.py  nvshmem_types.py  rma.py  teams.py  utils.py
nvshmem/nvshmem4py/nvshmem/core/device/: __init__.py
nvshmem/nvshmem4py/nvshmem/core/device/cute/: __init__.py  amo.py  collective.py  direct.py  mem.py  rma.py
nvshmem/nvshmem4py/nvshmem/core/device/numba/: __init__.py  amo.py  collective.py  direct.py  mem.py  rma.py
nvshmem/nvshmem4py/nvshmem/core/interop/: cupy.py  cute.py  torch.py
nvshmem/nvshmem4py/perftest/: alltoall_on_stream.py  broadcast_on_stream.py  fcollect_on_stream.py  reducescatter_on_stream.py  reduction_on_stream.py  utils.py
nvshmem/nvshmem4py/scripts/: generate_pyproject_toml.py
nvshmem/nvshmem4py/test/: collective_test.py  init_test.py  memory_test.py  rma_test.py  teams_test.py  test_collective.py  test_cute_interop.py  test_get_version.py  test_highlevel_bindings.py  test_npe.py  test_ptr.py  test_ring.py  test_ring_allreduce.py  utils.py  wheel_sanity_test.py
nvshmem/nvshmem4py/test/device/cute/: conftest.py  test_cute_bindings.py  test_device_amo.py  test_device_coll.py  test_device_mem.py  test_device_rma.py  test_device_sync.py  utils.py
nvshmem/nvshmem4py/test/device/numba/: conftest.py  test_device_amo.py  test_device_barrier.py  test_device_coll.py  test_device_mem.py  test_device_rma.py  test_device_sync.py  utils.py
nvshmem/perftest/: CMakeLists.txt
nvshmem/perftest/common/: CMakeLists.txt  utils.cu  utils.h
nvshmem/perftest/device/: CMakeLists.txt
nvshmem/perftest/device/coll/: alltoall_latency.cu  barrier_latency.cu  bcast_latency.cu  coll_test.h  fcollect_latency.cu  redmaxloc_latency.cu  reducescatter_latency.cu  reduction_latency.cu  sync_latency.cu
nvshmem/perftest/device/pt-to-pt/: CMakeLists.txt  shmem_g_bw.cu  shmem_g_latency.cu  shmem_get_bw.cu  shmem_get_latency.cu  shmem_p_bw.cu  shmem_p_latency.cu  shmem_p_ping_pong_latency.cu  shmem_put_atomic_ping_pong_latency.cu  shmem_put_bw.cu  shmem_put_latency.cu  shmem_put_ping_pong_latency.cu  shmem_put_signal_ping_pong_latency.cu  shmem_signal_ping_pong_latency.cu  shmem_st_bw.cu
nvshmem/perftest/device/tile/: tile_allgather_latency.cu  tile_allreduce_latency.cu  tile_coll_test.h
nvshmem/perftest/host/coll/: alltoall_on_stream.cpp  barrier_all_on_stream.cpp  barrier_on_stream.cpp  broadcast_on_stream.cpp  coll_test.h  fcollect_on_stream.cpp  reduction_on_stream.cpp  sync_all_on_stream.cpp  sync_on_stream.cpp
nvshmem/perftest/host/init/: malloc.cpp
nvshmem/perftest/host/pt-to-pt/: bw.cpp  latency.cpp  stream_latency.cu
nvshmem/scripts/: bitcode_lib_cleanup.sh
nvshmem/src/: CMakeLists.txt
nvshmem/src/device/init/: init_device.cu
nvshmem/src/device/launch/: collective_launch.cpp
nvshmem/src/host/bootstrap/: bootstrap.cpp  bootstrap_loader.cpp
nvshmem/src/host/coll/: cpu_coll.cpp
nvshmem/src/host/comm/: amo.cpp  fence.cpp  putget.cpp  quiet.cpp  rma.cu  sync.cpp
nvshmem/src/host/init/: init.cu  init_nvtx.cpp
nvshmem/src/host/mem/: custom_malloc.cpp  dlmalloc.h  mem.cpp  mem_heap.cpp  mem_transport.cpp
nvshmem/src/host/proxy/: proxy.cpp  proxy_host.h
nvshmem/src/host/team/: team.cu  team_internal.cpp  team_internal_cuda.cu
nvshmem/src/host/topo/: topo.cpp  topo.h
nvshmem/src/host/transport/: transport.cpp
nvshmem/src/host/util/: debug.cpp  env_vars.cpp  sockets.cpp  util.cpp
nvshmem/src/include/: nvshmem.h  nvshmemx.h
nvshmem/src/include/bootstrap_host_transport/: env_defs_internal.h
nvshmem/src/include/device/: nvshmem_coll_defines.cuh  nvshmem_defines.h  nvshmem_device_macros.h  nvshmemx_defines.h
nvshmem/src/include/device_host/: nvshmem_common.cuh  nvshmem_proxy_channel.h  nvshmem_tensor.h  nvshmem_types.h
nvshmem/src/include/device_host_transport/: nvshmem_common_ibgda.h  nvshmem_common_transport.h  nvshmem_constants.h
nvshmem/src/include/host/: nvshmem_api.h  nvshmem_coll_api.h  nvshmemx_api.h  nvshmemx_coll_api.h
nvshmem/src/include/non_abi/: nvshmem_build_options.h.in  nvshmemx_error.h
nvshmem/test/: CMakeLists.txt
nvshmem/test/apps/cufft/: cufft_smoke_test.cu
nvshmem/test/apps/dgl/: dgl.cu
nvshmem/test/common/: data_check.cpp  data_check.h  perf_utils.cu  perf_utils.h  ring_alltoall.cpp  ring_alltoall.h  utils.cu  utils.h
nvshmem/test/device/: CMakeLists.txt
nvshmem/test/device/pt-to-pt/: CMakeLists.txt  g.cu  get.cu  get_nbi.cu  getmem.cu  getmem_nbi.cu  getsize.cu  getsize_nbi.cu  iget.cu  iput.cu  p.cu  put.cu  put_nbi.cu  putmem.cu  putmem_nbi.cu  (+7 more)
nvshmem/test/host/interop/: CMakeLists.txt
src/: dsm_global.hpp  dsm_manager.hpp  dummy.cu
(+126 files in other folders)
